<resources>
    <string name="app_name">ProjektSklep</string>
    <string name="register_welcome">Rejestracja</string>
    <string name="login_welcome">Logowanie</string>
    <string name="first_name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="email">E-mail</string>
    <string name="password">Hasło</string>
    <string name="password_repeat">Powtórz hasło</string>
    <string name="phone_number">Numer telefonu</string>
    <string name="submit">Potwierdź</string>
    <string name="menu_shop">Sklep</string>
    <string name="menu_orders">Zamówienia</string>
    <string name="menu_profile">Profil</string>
    <string name="register">Zarejestruj się</string>
    <string name="wrong_data">Niepoprawne dane</string>
    <string name="welcome">Witaj, </string>
    <string name="account_created">Konto stworzone, zaloguj się</string>
    <string name="log_in">Zaloguj się</string>
    <string name="logout">Wyloguj się</string>
    <string name="logout_success">Wylogowano</string>
    <string name="log_in_orders">Zaloguj się, by zobaczyć swoje zamówienia</string>
    <string name="log_in_to_order">Zaloguj się, by złożyć zamówienie</string>
    <string name="not_logged_in">Niezalogowany</string>
    <string name="email_exists">Ten email został już użyty</string>
    <string name="change_data">Zmień dane</string>
    <string name="central_unit">Jednostka centralna</string>
    <string name="i_want_mouse">Chcę myszkę</string>
    <string name="i_want_keyboard">Chcę klawiaturę</string>
    <string name="i_want_monitor">Chcę monitor</string>
    <string name="total">Razem</string>
    <string name="order_submit">Zamawiam</string>
    <string name="product">Produkt</string>
    <string name="product_id">Produkt ID:</string>
    <string name="order_taken">Złożono zamówienie</string>
    <string name="order_error">Błąd zamówienia</string>
    <string name="order_cancel">Anuluj</string>
    <string name="order_cancelled">Zamówienie anulowane</string>
    <string name="order_sure">Czy na pewno chcesz anulować zamówienie?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="author">Autor</string>
    <string name="author_info" translatable="false">Mikołaj Cichocki 4Pp</string>
    <string name="ok" translatable="false">OK</string>
    <string name="save_user_data">Zapisz dane logowania</string>
</resources>