<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account.RegisterFragment"
    android:paddingHorizontal="10dp">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_welcome"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/register_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_below="@id/register_title"
        android:layout_marginTop="30dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/register_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_below="@id/register_first_name"
        android:layout_marginTop="30dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@id/register_last_name"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/register_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_below="@id/register_email"
        android:layout_marginTop="30dp"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@id/register_phone_number"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/register_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_repeat"
        android:layout_below="@id/register_password"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/register_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@id/register_password_repeat"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/register_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_submit"
        android:text="@string/login_welcome" />


</RelativeLayout>