<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    tools:context=".Account.RegisterFragment">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@id/login_title"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@id/login_email"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@id/login_password"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/login_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_submit"
        android:text="@string/register"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"/>

</RelativeLayout>