<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp">

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_profile"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/profile_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_title"
        android:layout_marginTop="30dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/profile_info"
        android:text="@string/logout" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/save_user_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logout_button"
        android:layout_marginTop="10dp"
        android:text="@string/save_user_data"
        android:checked="true"/>

</RelativeLayout>